[gd_scene load_steps=27 format=3 uid="uid://c1fgxxi01q0n1"]

[ext_resource type="Script" path="res://addons/EasyMenus/Scripts/game_over_menu_controller.gd" id="1_3l5aj"]
[ext_resource type="Texture2D" uid="uid://bv4p6g4h1ye5n" path="res://NEW-UI/OPTIONS1.png" id="2_537t2"]
[ext_resource type="Texture2D" uid="uid://008173to81o8" path="res://NEW-UI/RESTART1.png" id="2_e4ger"]
[ext_resource type="PackedScene" uid="uid://qlskttl1wjr7" path="res://addons/EasyMenus/Scenes/options_menu.tscn" id="2_p5nu7"]
[ext_resource type="Texture2D" uid="uid://blnfr4hyqmp3t" path="res://NEW-UI/RESTART2.png" id="3_0j1kp"]
[ext_resource type="Texture2D" uid="uid://bixib385jnomr" path="res://NEW-UI/OptionsHov.png" id="3_nieph"]
[ext_resource type="Texture2D" uid="uid://f21m5djrxvil" path="res://OptionsPress.png" id="4_32dmm"]
[ext_resource type="Texture2D" uid="uid://cn001po4mmcoh" path="res://NEW-UI/RESTART3.png" id="4_56uxe"]
[ext_resource type="Texture2D" uid="uid://cmiyh36brebxi" path="res://NEW-UI/QUIT1.png" id="5_3bcya"]
[ext_resource type="Texture2D" uid="uid://cjmtajaly4pxn" path="res://NEW-UI/QuitHove.png" id="6_3ppi3"]
[ext_resource type="Texture2D" uid="uid://she5dddoyeod" path="res://NEW-UI/QuitPress (1).png" id="7_ry55a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kto2u"]
texture = ExtResource("2_e4ger")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ergmc"]
texture = ExtResource("3_0j1kp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0olj2"]
texture = ExtResource("4_56uxe")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yfaes"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1kg1o"]
texture = ExtResource("3_0j1kp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ldhbr"]
texture = ExtResource("2_537t2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o4p36"]
texture = ExtResource("3_nieph")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6a7rs"]
texture = ExtResource("4_32dmm")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yw6ak"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_by6i2"]
texture = ExtResource("3_nieph")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ct75p"]
texture = ExtResource("5_3bcya")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_asqiq"]
texture = ExtResource("6_3ppi3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k26q4"]
texture = ExtResource("7_ry55a")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g5cq6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5ffsn"]
texture = ExtResource("6_3ppi3")

[node name="GameOverMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3l5aj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="MenuLabel" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Game Over Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartGameButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_kto2u")
theme_override_styles/hover = SubResource("StyleBoxTexture_ergmc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0olj2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yfaes")
theme_override_styles/focus = SubResource("StyleBoxTexture_1kg1o")

[node name="OptionsButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_ldhbr")
theme_override_styles/hover = SubResource("StyleBoxTexture_o4p36")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6a7rs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yw6ak")
theme_override_styles/focus = SubResource("StyleBoxTexture_by6i2")

[node name="QuitButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_ct75p")
theme_override_styles/hover = SubResource("StyleBoxTexture_asqiq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k26q4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_g5cq6")
theme_override_styles/focus = SubResource("StyleBoxTexture_5ffsn")

[node name="OptionsMenu" parent="." instance=ExtResource("2_p5nu7")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="Content/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Content/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Content/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="close" from="OptionsMenu" to="." method="_on_options_menu_close"]
